--- a/app/views/application/homepage.html.erb
+++ b/app/views/application/homepage.html.erb
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <p> Team members: </p>
+    <p> Sanwu Luo </p>
     <p> Haolin Zhu </p>
     <p> David Oh </p>
     <p> Faiz Shamji </p>
